fixed spacing on home page

--- a/phoolkumari-1a1-2.css
+++ b/phoolkumari-1a1-2.css
@@ -24,8 +24,8 @@
 .container-text-choices {
     position: absolute;
     top:50%;
-    left:50%;
-    transform: translate(-50%,-50%); 
+    left:5%;
+    transform: translate(0%,-50%); 
     height: 80vh;
     width: 40%;
     padding: 0;
